--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 /**
  * Auto-generated backend code
  *
- * Purpose: Project documentation and setup instructions
- * File: README.md
+ * Purpose: Environment variables template
+ * File: .env.example
  */
 
 // TODO: Implement functionality based on requirements
