update voice architecture initial refactor

--- a/.env.example
+++ b/.env.example
@@ -3,18 +3,44 @@
 # Database
 DATABASE_URL=sqlite:///./restaurant_reservations.db
 
-# Twilio SMS (Phase 3)
+# Twilio SMS & Voice (Phase 3 & 4)
 # Get credentials from: https://www.twilio.com/console
 TWILIO_ACCOUNT_SID=your_account_sid_here
 TWILIO_AUTH_TOKEN=your_auth_token_here
 TWILIO_PHONE_NUMBER=+1234567890
 
-# Twilio Voice (Phase 4) - uses same credentials as above
-# Twilio provides built-in speech-to-text and text-to-speech
+# Voice AI Services (Phase 4)
+# Real-time voice AI with streaming STT, LLM, and TTS
 
-# AI Conversation Handler (Phase 4)
-# Get your API key from: https://console.anthropic.com/
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# Deepgram STT (Speech-to-Text) - Required
+# Get your API key from: https://console.deepgram.com/
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
+
+# LLM Provider - Gemini is default, OpenAI is fallback
+# Primary: Gemini (default, cheaper)
+# Get your API key from: https://aistudio.google.com/
+GOOGLE_AI_API_KEY=your_google_ai_api_key_here
+GEMINI_MODEL=gemini-2.0-flash-exp
+LLM_PROVIDER=gemini
+
+# Fallback: OpenAI (optional, used if Gemini fails)
+# Get your API key from: https://platform.openai.com/
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o
+
+# ElevenLabs TTS (Text-to-Speech) - Required
+# Get your API key from: https://elevenlabs.io/
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+ELEVENLABS_MODEL=eleven_turbo_v2_5
+ELEVENLABS_VOICE_ID=cgSgspJ2msm6clMCkdW9  # Optional, uses default if not set
+
+# WebSocket URL for Twilio Media Streams - Required
+# For local testing with ngrok: 
+#   1. Start ngrok: ngrok http 8000
+#   2. Copy the HTTPS URL (e.g., https://abc123.ngrok.io)
+#   3. Use wss:// prefix: wss://abc123.ngrok.io
+# For production: wss://your-domain.com
+PUBLIC_WS_URL=wss://your-ngrok-url.ngrok.io
 
 # Voice Webhook Configuration (Phase 4)
 # Configure these URLs in your Twilio phone number settings:
