--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,10 @@ python-jose[cryptography]>=3.3.0
 bcrypt>=4.0.0
 googlemaps>=4.10.0
 PyPDF2>=3.0.0
+
+# Voice AI Services
+openai>=1.0.0
+google-generativeai>=0.3.0
+deepgram-sdk>=3.0.0
+elevenlabs>=0.2.0
+websockets>=12.0
