update menu parser to use gemini

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ PyPDF2>=3.0.0
 
 # Voice AI Services
 openai>=1.0.0
-google-generativeai>=0.3.0
+google-genai>=0.1.0
 deepgram-sdk>=3.0.0
 elevenlabs>=0.2.0
 websockets>=12.0
